changing to darkmode

--- a/data/assigment_1/raw/hello_class.html
+++ b/data/assigment_1/raw/hello_class.html
@@ -13,6 +13,8 @@
            align-items: center;
            justify-content: center;
            gap: 2em;
+           background-color: black;
+           color: white;
         }
         table {
             border-collapse: collapse;
@@ -22,21 +24,21 @@
             background-color: #d2b48c; /* Light brown color */
             color: black;
             padding: 10px;
-            border: 1px solid #000; /* Border for header */
+            border: 1px solid #fff; /* Border for header */
             text-align: left;
         }
 
         td {
             padding: 10px;
-            border: 1px solid #000; /* Border for table cells */
+            border: 1px solid #fff; /* Border for table cells */
         }
 
         tr:nth-child(even) {
-            background-color: #f2f2f2; /* Light gray for even rows */
+            background-color: #242424; /* Light gray for even rows */
         }
 
         tr:nth-child(odd) {
-            background-color: #ffffff; /* White for odd rows */
+            background-color: #646464; /* White for odd rows */
         }
 
         table, th, td {
